--- a/style.css
+++ b/style.css
@@ -25,10 +25,9 @@ header {
 
 .gallery {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 150px));
-  gap: 50px;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  gap: 20px;
   padding: 20px;
-  padding-left: 50px;
 }
 
 .thumbnail {
@@ -109,5 +108,22 @@ header {
   padding-left: 60px;
   margin-top: 40px;
   color: #333;
+}
+@media (max-width: 768px) {
+  header {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .nav {
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+  }
+
+  .nav a {
+    padding: 10px 0;
+    margin-left: 0;
+  }
 }
 
