--- a/style.css
+++ b/style.css
@@ -1,8 +1,17 @@
 body {
-  background-color: #fff;
-  color: #333;
-  margin: 0;
-  font-family: "futura", sans-serif;
+  font-size: 16px;
+  line-height: 1.6;
+}
+
+@media (max-width: 768px) {
+  body {
+    font-size: 14px;
+    line-height: 1.5;
+  }
+
+  .site-title {
+    font-size: 1.2rem;
+  }
 }
 
 header {
