--- a/style.css
+++ b/style.css
@@ -97,12 +97,13 @@ body {
 
 .close {
   position: absolute;
-  top: 10px;
-  right: 20px;
-  font-size: 2rem;
+  top: 50%;
   color: #333;
+  font-size: 2rem;
   cursor: pointer;
   padding: 10px;
+  user-select: none;
+  transform: translateY(-50%);
 }
 
 /* レスポンシブ対応 */
