--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body {
   position: fixed;
   z-index: 999;
   left: 0;
-  top: 0;
+  top: 50px;
   width: 100%;
   height: 100%;
   background-color: rgba(255, 255, 255, 0.95);
