--- a/style.css
+++ b/style.css
@@ -53,9 +53,9 @@ body {
 .modal {
   display: none;
   position: fixed;
-  z-index: 999;
+  z-index: 1001;
   left: 0;
-  top: 50px;
+  top: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(255, 255, 255, 0.95);
