--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   color: #333;
   margin: 0;
   font-family: "futura", sans-serif;
+  margin-top: 80px;
 }
 
 header {
@@ -16,10 +17,6 @@ header {
   right: 0; 
   z-index: 1000;  
   background-color: #fff;  
-}
-
-body {
-  margin-top: 80px; /* ヘッダーが固定されるため、その分下に余白を作る */
 }
 
 .site-title {
@@ -124,7 +121,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 50px;
-  position: fixed;  
+  position: relative;  
   top: 0;
   left: 0; 
   right: 0; 
@@ -189,12 +186,7 @@ body {
   }
 
   .nav.show {
-    display: block; /* showクラスが付与されたときにメニューを表示 */
+    display: flex; /* showクラスが付与されたときにメニューを表示 */
   }
 
-  .nav a {
-    padding: 15px;
-    text-align: center;
-    width: 100%;
-  }
 }
