--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ header {
   margin-left: 20px;
   padding: 10px;
   text-decoration: none;
+  font-family: "futura", sans-serif;
   color: #333;
 }
 
