--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@ body {
   background-color: #fff;
   color: #333;
   margin: 0;
-  font-family: "futura", sans-serif;
+  font-family: sans-serif;
+  margin-top: 80px;
 }
 
 header {
@@ -16,16 +17,14 @@ header {
   right: 0; 
   z-index: 1000;  
   background-color: #fff;  
-}
-
-body {
-  margin-top: 80px; /* ヘッダーが固定されるため、その分下に余白を作る */
+  font-family: "futura",sans-serif;
 }
 
 }
 
 .site-title {
   font-size: 1.5rem;
+  font-family: "futura",sans-serif;
 }
 
 .nav a {
@@ -33,6 +32,7 @@ body {
   padding: 10px;
   text-decoration: none;
   color: #333;
+  font-family: "futura",sans-serif;
 }
 
 .gallery {
