--- a/style.css
+++ b/style.css
@@ -2,29 +2,16 @@ body {
   background-color: #fff;
   color: #333;
   margin: 0;
-  font-family: sans-serif;
+  font-family: sans-serif;  /* 本文の欧文にsans-serifを指定 */
   margin-top: 80px;
 }
 
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-  position: fixed;  
-  top: 0;
-  left: 0; 
-  right: 0; 
-  z-index: 1000;  
-  background-color: #fff;  
-  font-family: "futura",sans-serif;
-}
-
+header, .site-title, .nav a {
+  font-family: "futura", sans-serif;  /* header, site-title, nav a にfuturaを指定 */
 }
 
 .site-title {
   font-size: 1.5rem;
-  font-family: "futura",sans-serif;
 }
 
 .nav a {
@@ -32,7 +19,6 @@ header {
   padding: 10px;
   text-decoration: none;
   color: #333;
-  font-family: "futura",sans-serif;
 }
 
 .gallery {
