--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@ header, .site-title, .nav a {
   font-size: 1.5rem;
 }
 
+
+.nav {
+  display: flex;
+  align-items: center;
+}
+
 .nav a {
   margin-left: 20px;
   padding: 10px;
